Added adapted code from team 254

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,12 @@
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
   "files.associations": {
-    "*.inc": "cpp",
-    "*.tcc": "cpp",
-    "limits": "cpp",
-    "memory": "cpp",
-    "type_traits": "cpp"
-  }
+	"*.inc": "cpp",
+	"*.tcc": "cpp",
+	"limits": "cpp",
+	"memory": "cpp",
+	"type_traits": "cpp",
+	"cmath": "cpp"
+},
+"C_Cpp.errorSquiggles": "Enabled"
 }
